# OversightSemanticSearch

./: README.md
Oversight Semantic Search/: README.md  app.py  pyproject.toml
Oversight Semantic Search/src/oversight_semantic_search/: __init__.py  cli.py  config.py  index.py
